@@ -1,3 +1,13 @@
+2004-03-10  Richard Williamson   <rjw@apple.com>
+
+	Updated header to include proposed changes from
+	plugin-futures list.  Calls from plugin to JavaScript
+	are now asynchronous.
+
+        Reviewed by Chris.
+
+        * bindings/NP_runtime.h:
+
 === Safari-131 ===
 
 2004-03-04  Richard Williamson   <rjw@apple.com>
